[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/npc/Chat.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/OutlineItem.tres" type="Material" id=2]
[ext_resource path="res://assets/gfx/world/Elevator Call Button.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/elevator_button.wav" type="AudioStream" id=4]
[ext_resource path="res://CallButton.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=6]
resource_name = "Disappear"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:material:shader_param/width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}

[sub_resource type="Animation" id=7]
resource_name = "Outline"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:material:shader_param/width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:material:shader_param/width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="CallButton" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 2 )
texture = ExtResource( 3 )
centered = false

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 16 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Disappear = SubResource( 6 )
anims/Outline = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Chat" parent="." instance=ExtResource( 1 )]
position = Vector2( 31, 9 )
z_index = 4
z_as_relative = false

[node name="sfx_button" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
